--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -901,7 +901,7 @@ Let $x \neq 0$ be in $\MyRat$. Then $x * x^{-1} = 1$.
 \begin{proof}
     \uses{MyRat.commRing, MyRat.mul_inv_cancel}
     \leanok
-    Clear because of \ref{MyRat.mul_inv_cancel}.
+    Clear because of Lemma~\ref{MyRat.mul_inv_cancel}.
 \end{proof}
 
 \subsection{\texorpdfstring{The inclusion $i \colon \N \to \MyRat$}{The inclusion}}
