--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -1078,3 +1078,15 @@ Exercice.
     \leanok
 It follows from unravelling all the definitions.
 \end{proof}
+
+\begin{lemma}
+    \label{MyRat.Quotient.mk_def}
+    \lean{MyRat.Quotient.mk_def}
+    \leanok
+    Let $a$ and $b$ be in $\MyInt$ with $b \neq 0$. Then $\llbracket (a, b) \rrbracket = j(a)*j(b)^{-1}$.
+\end{lemma}
+\begin{proof}
+    \uses{MyRat.inv, MyRat.mul, MyRat.j}
+    \leanok
+Exercice.
+\end{proof}
