--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -1,1107 +1,3 @@
-\chapter{The integers}
+\input{integers.tex}
 
-We construct the integers starting from the natural numbers $MyInt$. Since \texttt{lean} already has a
-type called $MyInt$, we define a new type called $\MyInt$ that will be another definition of the integers.
-
-\section{The \emph{preintegers}}
-
-$\MyInt$ will be a quotient of a type called $\MyPreint$.
-
-\begin{definition}
-    \label{MyPreint}
-    \lean{MyPreint}
-    \leanok
-    Let $\MyPreint$ be $\N \times \N$
-\end{definition}
-
-\begin{definition}
-    \label{MyPreint.R}
-    \lean{MyPreint.R}
-    \leanok
-    \uses{MyPreint}
-We define a relation $R$ on $\MyPreint$ as follows: $(a,b)$ and $(c, d)$ are related if and only if
-\[
-a + d = b + c
-\]
-\end{definition}
-
-\begin{lemma}
-$R$ is a reflexive relation.
-    \label{MyPreint.R_refl}
-    \lean{MyPreint.R_refl}
-    \leanok
-\end{lemma}
-\begin{proof}
-    \leanok
-    \uses{MyPreint.R}
-    This follows by commutativity of addition in $\N$.
-\end{proof}
-
-\begin{lemma}
-$R$ is a symmetric relation.
-    \label{MyPreint.R_symm}
-    \lean{MyPreint.R_symm}
-    \leanok
-\end{lemma}
-\begin{proof}
-    \leanok
-    \uses{MyPreint.R}
-    This follows by commutativity of addition in $\N$.
-\end{proof}
-
-\begin{lemma}
-$R$ is a transitive relation.
-    \label{MyPreint.R_trans}
-    \lean{MyPreint.R_trans}
-    \leanok
-\end{lemma}
-\begin{proof}
-    \leanok
-    \uses{MyPreint.R}
-    Let $x$, $y$ and $z$ in $\MyPreint$ such that $x R y$ and $y R z$. We can write $x = (a,b)$ and similarly
-    for $y = (c,d)$ and $z = (e,f)$. By assumption we have $a+d=b+c$ and $c+f=d+e$. Adding these equalities we get
-    \[
-    a+d+c+f=b+c+d+e
-    \]
-    Since addition on $\N$ is cancellative we get
-    \[
-    a+f = b + e
-    \]
-    as wanted.
-\end{proof}
-
-\begin{lemma}
-    \label{MyPreint.R_equiv}
-    \lean{MyPreint.R_equiv}
-    \leanok
-We have that $R$ is an equivalence relation. From now on, we will write $x \approx y$ for
-$x R y$.
-\end{lemma}
-\begin{proof}
-    \leanok
-    \uses{MyPreint.R_refl, MyPreint.R_symm, MyPreint.R_trans}
-Clear from Lemma~\ref{MyPreint.R_refl}, Lemma~\ref{MyPreint.R_symm} and Lemma~\ref{MyPreint.R_trans}.
-\end{proof}
-
-\begin{definition}
-    \label{MyPreint.neg}
-    \lean{MyPreint.neg}
-    \leanok
-    \uses{MyPreint.R}
-We define an operation, called \emph{negation} on $\MyPreint$ as follows: the negation of $x = (a,b)$ is
-$(b,a)$:
-\[
--x = -(a,b) = (b,a)
-\]
-\end{definition}
-
-\begin{lemma}
-    \label{MyPreint.neg_quotient}
-    \lean{MyPreint.neg_quotient}
-    \leanok
-If $x \approx x'$, then $-x \approx -x'$.
-\end{lemma}
-\begin{proof}
-\uses{MyPreint.neg}
-\leanok
-Let $x = (a,b)$ and $x' = (a',b')$, so by assumption $a + b' = b + a'$. By definition we have
-\[
--x=-(a,b)=(b,a) \mbox{ and } -x'=-(a',b')=(b',a')
-\]
-We need to show $b+a'=b'+a$, which follows immediately from $a + b' = b + a'$.
-\end{proof}
-
-\begin{definition}
-    \label{MyPreint.add}
-    \lean{MyPreint.add}
-    \leanok
-    \uses{MyPreint.R}
-We define an operation, called \emph{addition} on $\MyPreint$ as follows: the addition of $x = (a,b)$
-and $y = (b, c)$ is
-\[
-x + y = (a,b) + (c,d) = (a+c, b + d)
-\]
-\end{definition}
-
-\begin{lemma}
-    \label{MyPreint.add_quotient}
-    \lean{MyPreint.add_quotient}
-    \leanok
-If $x \approx x'$ and $y \approx y'$, then $x + y \approx x' + y'$.
-\end{lemma}
-\begin{proof}
-\uses{MyPreint.add}
-\leanok
-Let $x = (a,b)$, $y = (c,d)$, $x' = (a',b')$ and $y' = (c',d')$ such that $x \approx x'$ and $y \approx y'$. by assumption we have
-\[
-a + b' = b + a' \mbox{ and } c + d' = d + c'
-\]
-Adding these two equalities we get
-\[
-a+b'+c+d'=b+a'+d+c'
-\]
-and hence
-\[
-a+c+b'+d'=b+d+a'+c'
-\]
-that is $x + y = (a+c,b+d) \approx (a'+c',b'+d') = x'+y'$.
-\end{proof}
-
-\begin{definition}
-    \label{MyPreint.mul}
-    \lean{MyPreint.mul}
-    \leanok
-    \uses{MyPreint.R}
-We define an operation, called \emph{multiplication} on $\MyPreint$ as follows: the multiplication of $x = (a,b)$ and $y = (b, c)$ is
-\[
-x * y = (a,b) * (c,d) = (a*c+b*d, a*d+b*c)
-\]
-\end{definition}
-
-\begin{lemma}
-    \label{MyPreint.mul_quotient}
-    \lean{MyPreint.mul_quotient}
-    \leanok
-If $x \approx x'$ and $y \approx y'$, then $x * y \approx x' * y'$.
-\end{lemma}
-\begin{proof}
-\uses{MyPreint.mul}
-\leanok
-Let $x = (a,b)$, $y = (c,d)$, $x' = (a',b')$ and $y' = (c',d')$ such that $x \approx x'$ and $y \approx y'$. by assumption we have
-\[
-a + b' = b + a' \mbox{ and } c + d' = d + c'
-\]
-Multiplying the first equality by $c'$ and by $d'$ we get
-\begin{equation} \label{H1}
-a * c' + b' * c' = b * c' + a' * c'
-\end{equation}
-and
-\begin{equation} \label{H2}
-b * d' + a' * d' = a * d' + b' * d'
-\end{equation}
-Multiplying the second equality by $a$ and by $b$ we get
-\begin{equation} \label{H3}
-a * c + a * d' = a * d + a * c'
-\end{equation}
-and
-\begin{equation} \label{H4}
-b * d + b * c' = b * c + b * d'
-\end{equation}
-Adding \eqref{H1} and \eqref{H4} we get
-\[
-a * c' + b' * c' + b * d + b * c' = b * c' + a' * c' + b * c + b * d'
-\]
-Adding \eqref{H3} and \eqref{H2} we get
-\[
- a * c + a * d' + b * d' + a' * d' = a * d + a * c' + a * d' + b' * d'
-\]
-Adding the last two equations and cancelling the terms appearing on both sides we finally have
-\[
-b' * c' + b * d + a * c + a' * d' =  a' * c' + b * c + a * d + b' * d'
-\]
-that is $x * y \approx  x'*y'$.
-\end{proof}
-
-\section{The integers}
-
-\subsection{Definitions}
-
-\begin{definition}
-    \label{MyInt}
-    \lean{MyInt}
-    \leanok
-    \uses{MyPreint.R_equiv}
-    We define our integers $\MyInt$ as
-\[
-\MyInt = \MyPreint \, / \approx
-\]
-We will write $\llbracket (a, b) \rrbracket$ for the class of $(a,b)$.
-\end{definition}
-
-\begin{definition}
-    \label{MyInt.zero}
-    \lean{MyInt.zero}
-    \uses{MyPreint.R_equiv}
-    \leanok
-We define the zero of $\MyInt$, denoted $0$ as the class of $(0,0)$.
-\end{definition}
-
-\begin{definition}
-    \label{MyInt.one}
-    \lean{MyInt.one}
-    \uses{MyPreint.R_equiv}
-    \leanok
-We define the one of $\MyInt$, denoted $1$ as the class of $(1,0)$.
-\end{definition}
-
-\subsection{Commutative ring structure}
-
-\begin{definition}
-    \label{MyInt.neg}
-    \lean{MyInt.neg}
-    \uses{MyPreint.R_equiv, MyPreint.neg_quotient}
-    \leanok
-We define the negation of $x = \llbracket (a, b) \rrbracket$ in $\MyInt$ as
-\[
--x = \llbracket -(a, b) \rrbracket
-\]
-Thanks to Lemma~\ref{MyPreint.neg_quotient} this is well defined.
-\end{definition}
-
-\begin{definition}
-    \label{MyInt.add}
-    \lean{MyInt.add}
-    \uses{MyPreint.R_equiv, MyPreint.add_quotient}
-    \leanok
-We define the addition of $x = \llbracket (a, b) \rrbracket$ and $y = \llbracket (c, d) \rrbracket$ in $\MyInt$ as
-\[
-x + y = \llbracket (a, b)+(c,d) \rrbracket
-\]
-Thanks to Lemma~\ref{MyPreint.add_quotient} this is well defined.
-\end{definition}
-
-\begin{definition}
-    \label{MyInt.mul}
-    \lean{MyInt.mul}
-    \uses{MyPreint.R_equiv, MyPreint.mul_quotient}
-    \leanok
-We define the multiplication of $x = \llbracket (a, b) \rrbracket$ and $y = \llbracket (c, d) \rrbracket$ in $\MyInt$ as
-\[
-x * y = \llbracket (a, b)*(c,d) \rrbracket
-\]
-Thanks to Lemma~\ref{MyPreint.mul_quotient} this is well defined.
-\end{definition}
-
-\begin{lemma}
-    \label{MyInt.add_assoc}
-    \lean{MyInt.add_assoc}
-    \leanok
-    Addition on $\MyInt$ is associative.
-\end{lemma}
-\begin{proof}
-    \uses{MyInt.add}
-    \leanok
-To prove the lemma it is enough to prove that, for all $a$, $b$, $c$, $d$, $e$ and $f$ in $\N$, we have
-\[
-(\llbracket (a, b) \rrbracket+ \llbracket (c, d) \rrbracket) + \llbracket (e, f) \rrbracket = \llbracket (a, b) \rrbracket + (\llbracket (c, d) \rrbracket + \llbracket (e, f) \rrbracket)
-\]
-Unravelling the definitions this is
-\[
-a + c + e + (b + (d + f)) = b + d + f + (a + (c + e))
-\]
-that is true by associativity and commutativity in $\N$.
-\end{proof}
-
-\begin{proposition}
-    \label{MyInt.commRing}
-    \lean{MyInt.commRing}
-    \leanok
-    $\MyInt$ with addition and multiplication is a commutative ring.
-\end{proposition}
-\begin{proof}
-    \uses{MyInt.add, MyInt.mul, MyInt.zero, MyInt.one}
-    \leanok
-    We have to prove various properties, namely:
-    \begin{itemize}
-        \item addition is associative (already done in \ref{MyInt.add_assoc})
-        \item $0$ works as neutral element for addition (on both sides)
-        \item existence of an inverse for addition (we prove that $x + (-x) = (-x) + x = 0$)
-        \item addition is commutative
-        \item left and right distributivity of multiplication with respect to addition
-        \item associativity of multiplication
-        \item $1$ works as neutral element for multiplication (on both sides)
-    \end{itemize}
-    All the proofs are essentially identical to the proof of Lemma~\ref{MyInt.add_assoc} above.
-\end{proof}
-
-\begin{lemma}
-    \label{MyInt.zero_ne_one}
-    \lean{MyInt.zero_ne_one}
-    \leanok
-In $\MyInt$ we have $0 \neq 1$.
-\end{lemma}
-\begin{proof}
-    \leanok
-    \uses{MyInt.zero, MyInt.one}
-    If $0 = 1$ by definition we would have $\llbracket (0,0) \rrbracket = \llbracket (1,0) \rrbracket$
-    so $0+1=0+0$ in $\N$, that is absurd.
-\end{proof}
-
-\begin{lemma}
-    \label{MyInt.mul_ne_zero}
-    \lean{MyInt.mul_ne_zero}
-    \leanok
-Let $x$ and $y$ in $\MyInt$ such that $x \neq 0$ and $y \neq 0$. Then $x*y \neq 0$.
-\end{lemma}
-\begin{proof}
-    \leanok
-    \uses{MyInt.zero, MyInt.mul}
-    It is enough to prove that, for all $a$, $b$, $c$ and $d$ in $\N$ such that $a \neq b$ and $c \neq d$ we have $a*c+b*d\neq a*d+b*c$. If this is not the case we must have $a = b$ or $c = d$. (Can you see how to prove this in $\N$? You cannot use subtraction!) and we are done.
-\end{proof}
-
-\begin{lemma}
-    \label{MyInt.eq_of_mul_eq_mul_right}
-    \lean{MyInt.eq_of_mul_eq_mul_right}
-    \leanok
-Let $x$, $y$ and $z$ in $\MyInt$ such that $x \neq 0$ and $y * x = z * x$. Then $y = z$.
-\end{lemma}
-\begin{proof}
-    \leanok
-    \uses{MyInt.mul_ne_zero}
-We have $0 = y*x-z*x=(y-z)*x$. Since $x \neq 0$ we have by Lemma~\ref{MyInt.mul_ne_zero} that $y-z=0$ and hence $y=z$.
-\end{proof}
-
-\subsection{\texorpdfstring{The inclusion $i \colon \N \to \MyInt$}{The inclusion}}
-\begin{definition}
-    \label{MyInt.i}
-    \lean{MyInt.i}
-    \uses{MyInt}
-    \leanok
-    We define a map
-\begin{gather*}
-    i \colon \N \to \MyInt \\
-    n \mapsto \llbracket (n,0) \rrbracket
-\end{gather*}
-\end{definition}
-
-\begin{lemma}
-    \label{MyInt.i_zero}
-    \lean{MyInt.i_zero}
-    \leanok
-We have that $i(0) = 0$.
-\end{lemma}
-\begin{proof}
-    \uses{MyInt, MyInt.i}
-    \leanok
-Clear from the definition.
-\end{proof}
-
-\begin{lemma}
-    \label{MyInt.i_one}
-    \lean{MyInt.i_one}
-    \leanok
-We have that $i(1) = 1$.
-\end{lemma}
-\begin{proof}
-    \uses{MyInt, MyInt.i}
-    \leanok
-Clear from the definition.
-\end{proof}
-
-\begin{lemma}
-    \label{MyInt.i_add}
-    \lean{MyInt.i_add}
-    \leanok
-For all $a$ and $b$ in $\N$ we have that
-\[
-i(a+b) = i(a) + i(b)
-\]
-\end{lemma}
-\begin{proof}
-    \uses{MyInt.add, MyInt.i}
-    \leanok
-    We have $i(a+b) = \llbracket (a+b, 0) \rrbracket$, $i(a) = \llbracket (a, 0) \rrbracket$ and
-    $i(b) = \llbracket (b, 0) \rrbracket$, so we need to prove that
-\[
-\llbracket (a+b, 0) \rrbracket = \llbracket (a, 0) \rrbracket + \llbracket (b, 0) \rrbracket
-\]
-that is obvious from the definition.
-\end{proof}
-
-\begin{lemma}
-    \label{MyInt.i_mul}
-    \lean{MyInt.i_mul}
-    \leanok
-For all $a$ and $b$ in $\N$ we have that
-\[
-i(a*b) = i(a) * i(b)
-\]
-\end{lemma}
-\begin{proof}
-    \uses{MyInt.mul, MyInt.i}
-    \leanok
-    We have $i(a*b) = \llbracket (a*b, 0) \rrbracket$, $i(a) = \llbracket (a, 0) \rrbracket$ and
-    $i(b) = \llbracket (b, 0) \rrbracket$, so we need to prove that
-\[
-\llbracket (a*b, 0) \rrbracket = \llbracket (a, 0) \rrbracket * \llbracket (b, 0) \rrbracket
-\]
-By definition of multiplication we have
-\[
-\llbracket (a, 0) \rrbracket * \llbracket (b, 0) \rrbracket = \llbracket (a*c+0*0, a*0+0*b) \rrbracket
-\]
-and the lemma follows.
-\end{proof}
-
-\begin{lemma}
-    \label{MyInt.i_injective}
-    \lean{MyInt.i_injective}
-    \leanok
-    We have that $i$ is injective.
-\end{lemma}
-\begin{proof}
-    \uses{MyInt.i}
-    \leanok
-    Let $a$ and $b$ such that $i(a)=i(b)$. This means $\llbracket (a,0) \rrbracket = \llbracket (b,0) \rrbracket$ so $a + 0 = 0 + b$ and hence $a = b$.
-\end{proof}
-
-\subsection{The order}
-
-\begin{definition}
-    \label{MyInt.le}
-    \lean{MyInt.le}
-    \uses{MyInt.i, MyInt.add}
-    \leanok
-Let $x$ and $y$ in $\MyInt$. We write $x \leq y$ if there exist a natural number $n$ such that
-\[
-y = x + i(n)
-\]
-\end{definition}
-
-\begin{lemma}
-    \label{MyInt.le_refl}
-    \lean{MyInt.le_refl}
-    \leanok
-    The relation $\leq$ on $\MyInt$ is reflexive.
-\end{lemma}
-\begin{proof}
-    \uses{MyInt.le}
-    \leanok
-    We can just take $n = 0$.
-\end{proof}
-
-\begin{lemma}
-    \label{MyInt.le_trans}
-    \lean{MyInt.le_trans}
-    \leanok
-    The relation $\leq$ on $\MyInt$ is transitive.
-\end{lemma}
-\begin{proof}
-    \uses{MyInt.le}
-    \leanok
-    Let $x$, $y$ and $z$ such that $x \leq y$ and $y \leq z$. It follows that there exist $p$ and $q$
-    such that $y = x + i(p)$ and $z = y + i(q)$. One can now take $p+q$ to show that $x \leq z$.
-\end{proof}
-
-\begin{lemma}
-    \label{MyInt.le_antisymm}
-    \lean{MyInt.le_antisymm}
-    \leanok
-    The relation $\leq$ on $\MyInt$ is antisymmetric.
-\end{lemma}
-\begin{proof}
-    \uses{MyInt.le, MyInt.i_zero, MyInt.i_injective}
-    \leanok
-    Let $x$ and $y$ such that $x \leq y$ and $y \leq x$. It follows that there exist $p$ and $q$
-    such that $y = x + i(p)$ and $x = y + i(q)$. In particular
-    \[
-    x = x + i(p) + i(q)
-    \]
-    Since $\MyInt$ is a ring, we obtain $i(p)+i(q) = 0$. Moreover $i(p+q)=i(p)+i(q)$ and $i(0)=0$, so
-    $i(p+q)=i(0)$ and hence, since $i$ is injective, $p+q = 0$. Now, $p$ and $q$ are \emph{natural numbers}, so $p=q=0$ and so $x=y$.
-\end{proof}
-
-It follows that $\leq$ is an order relation.
-
-\begin{lemma}
-    \label{MyInt.le_total}
-    \lean{MyInt.le_total}
-    \leanok
-    The order $\leq$ on $\MyInt$ is a total order.
-\end{lemma}
-\begin{proof}
-    \uses{MyInt.le, MyInt.i_zero, MyInt.i_injective}
-    \leanok
-    Let $x$ and $y$ by in $\MyInt$. We can write $x = \llbracket (a,b) \rrbracket$ and
-    $y = \llbracket (c,d) \rrbracket$ and we need to prove that
-    $\llbracket (a,b) \rrbracket \leq \llbracket (c,d) \rrbracket$ or $\llbracket (c,d) \rrbracket \leq \llbracket (a,b) \rrbracket$. Let's consider two cases (we use that the order on $\N$ is total):
-    \begin{itemize}
-        \item if $a + d \leq b + c$ let $e$ be such that $b + c = a + d + e$. We prove that
-        $\llbracket (a,b) \rrbracket \leq \llbracket (c,d) \rrbracket$ using $e$. We have
-        \[
-        \llbracket (a,b) \rrbracket+i(e) = \llbracket (a,b) \rrbracket + \llbracket (e,0) \rrbracket
-        = \llbracket (a+e,b+0) \rrbracket = \llbracket (a+e,b) \rrbracket
-        \]
-        We have that $\llbracket (a+e,b) \rrbracket = \llbracket (c,d) \rrbracket$ since
-        \[
-        a+e+d=b+d
-        \]
-        by our assumption on $e$ and so $\llbracket (a,b) \rrbracket \leq \llbracket (c,d) \rrbracket$.
-        \item the case $b + c \leq a + d$ is completely analogous.
-    \end{itemize}
-\end{proof}
-
-\begin{lemma}
-    \label{MyInt.linearOrder}
-    \lean{MyInt.linearOrder}
-    \leanok
-    We have that $\MyInt$ with $\leq$ is a \emph{linear order}
-\end{lemma}
-\begin{proof}
-    \uses{MyInt.le_refl, MyInt.le_antisymm, MyInt.le_trans, MyInt.le_total}
-    \leanok
-    Clear from the lemmas above.
-\end{proof}
-
-\begin{lemma}
-    \label{MyInt.zero_le_one}
-    \lean{MyInt.zero_le_one}
-    \leanok
-    In $\MyInt$ we have that $0 \leq 1$.
-\end{lemma}
-\begin{proof}
-    \uses{MyInt.zero, MyInt.one, MyInt.le, MyInt.add}
-    \leanok
-    We use $1$ (as natural number). We need to prove that $0 + i(1) = 1$. Unravelling the definitions
-    this is obvious.
-\end{proof}
-
-\begin{lemma}
-    \label{MyInt.i_le_iff}
-    \lean{MyInt.i_le_iff}
-    \leanok
-    Given two natural numbers $a$ and $b$, we have $i(a) \leq b$ if and only if $a \leq b$.
-\end{lemma}
-\begin{proof}
-    \uses{MyInt.i, MyInt.i_add, MyInt.i_injective}
-    \leanok
-    \begin{itemize}
-        \item If $i(a) \leq i(b)$, let $n$ be such that $i(b) = i(a)+i(n)=i(a+n)$. We obtain $b = a + n$ by injectivity of $i$ and so $a \leq b$.
-        \item If $a \leq b$, let $k$ be such that $b = a + k$. We can use $k$ to show that $i(a) \leq i(b)$.
-    \end{itemize}
-\end{proof}
-
-\subsection{Interaction between the order and the ring structure}
-
-\begin{lemma}
-    \label{MyInt.add_le_add_left}
-    \lean{MyInt.add_le_add_left}
-    \leanok
-    Let $x$, $y$ and $z$ in $\MyInt$ be such that $x \leq y$. Then $z + x ≤ z + y$.
-\end{lemma}
-\begin{proof}
-    \uses{MyInt.le, MyInt.add}
-    \leanok
-    Let $n$ be such that $y = x + i(n)$. It's immediate that $n$ also work to show that $z + x ≤ z + y$.
-\end{proof}
-
-\begin{lemma}
-    \label{MyInt.mul_pos}
-    \lean{MyInt.mul_pos}
-    \leanok
-    Let $x$ and $y$ in $\MyInt$ be such that $0 < x$ and $0 < y$. Then $0 < x * y$.
-\end{lemma}
-\begin{proof}
-    \leanok
-    \uses{MyInt.mul_ne_zero, MyInt.le, MyInt.mul}
-    By Lemma~\ref{MyInt.mul_ne_zero} we already know that $x*y \neq 0$, so it is enough to prove that
-    $0 \leq x*y$. Since $0 < x$, we have in particular that $0 \leq x$, and let $n$ be such that $x = 0 + i(n)$. Similarly, let $m$ be such that $y = 0 + i(m)$. We have $0 + i(n) = i(n)$ and $0 + i(m) = i(m)$, so we need to prove that $0 \leq i(n)*i(m)$. We do so using $n*m$: we have
-    \[
-    0+i(n*m)=i(n*m)=i(n)*i(m)
-    \]
-    as required.
-\end{proof}
-
-\chapter{The rationals}
-
-We can now define the rationals, starting with our copy of the integers $\MyInt$.
-
-We follow a similar path to the one for $\MyInt$.
-
-\section{The \emph{prerationals}}
-
-$\MyRat$ will be a quotient of a type called $\MyPrerat$.
-
-\begin{definition}
-    \label{MyPrerat}
-    \lean{MyPrerat}
-    \leanok
-    \uses{MyInt}
-    Let $\MyPrerat$ be $MyInt \times MyInt \backslash \{0\}$
-\end{definition}
-
-\begin{definition}
-    \label{MyPrerat.R}
-    \lean{MyPrerat.R}
-    \leanok
-    \uses{MyPrerat}
-We define a relation $R$ on $\MyPrerat$ as follows: $(a,b)$ and $(c, d)$ are related if and only if
-\[
-a * d = b * c
-\]
-\end{definition}
-
-\begin{lemma}
-$R$ is a reflexive relation.
-    \label{MyPrerat.R_refl}
-    \lean{MyPrerat.R_refl}
-    \leanok
-\end{lemma}
-\begin{proof}
-    \leanok
-    \uses{MyPrerat.R}
-    Exercice.
-\end{proof}
-
-\begin{lemma}
-$R$ is a symmetric relation.
-    \label{MyPrerat.R_symm}
-    \lean{MyPrerat.R_symm}
-    \leanok
-\end{lemma}
-\begin{proof}
-    \leanok
-    \uses{MyPrerat.R}
-    Exercice.
-\end{proof}
-
-\begin{lemma}
-$R$ is a transitive relation.
-    \label{MyPrerat.R_trans}
-    \lean{MyPrerat.R_trans}
-    \leanok
-\end{lemma}
-\begin{proof}
-    \leanok
-    \uses{MyPrerat.R}
-    Exercice.
-\end{proof}
-
-\begin{lemma}
-    \label{MyPrerat.R_equiv}
-    \lean{MyPrerat.R_equiv}
-    \leanok
-We have that $R$ is an equivalence relation. From now on, we will write $x \approx y$ for
-$x R y$.
-\end{lemma}
-\begin{proof}
-    \leanok
-    \uses{MyPrerat.R_refl, MyPrerat.R_symm, MyPrerat.R_trans}
-Clear from Lemma~\ref{MyPrerat.R_refl}, Lemma~\ref{MyPrerat.R_symm} and Lemma~\ref{MyPrerat.R_trans}.
-\end{proof}
-
-\begin{definition}
-    \label{MyPrerat.neg}
-    \lean{MyPrerat.neg}
-    \leanok
-    \uses{MyPrerat.R}
-We define an operation, called \emph{negation} on $\MyPrerat$ as follows: the negation of $x = (a,b)$ is
-$(-a,b)$:
-\[
--x = -(a,b) = (-a,b)
-\]
-Note that it automatically well defined (meaning that second component of $(-a,b)$ is different from $0$).
-\end{definition}
-
-\begin{lemma}
-    \label{MyPrerat.neg_quotient}
-    \lean{MyPrerat.neg_quotient}
-    \leanok
-If $x \approx x'$, then $-x \approx -x'$.
-\end{lemma}
-\begin{proof}
-\uses{MyPrerat.neg}
-\leanok
-Exercice.
-\end{proof}
-
-\begin{definition}
-    \label{MyPrerat.add}
-    \lean{MyPrerat.add}
-    \leanok
-    \uses{MyPrerat.R}
-We define an operation, called \emph{addition} on $\MyPrerat$ as follows: the addition of $x = (a,b)$
-and $y = (b, c)$ is
-\[
-x + y = (a,b) + (c,d) = (a * d + b * c, b*d)
-\]
-Do you see why it is well defined?
-\end{definition}
-
-\begin{lemma}
-    \label{MyPrerat.add_quotient}
-    \lean{MyPrerat.add_quotient}
-    \leanok
-If $x \approx x'$ and $y \approx y'$, then $x + y \approx x' + y'$.
-\end{lemma}
-\begin{proof}
-\uses{MyPrerat.add}
-\leanok
-Exercice.
-\end{proof}
-
-\begin{definition}
-    \label{MyPrerat.mul}
-    \lean{MyPrerat.mul}
-    \leanok
-    \uses{MyPrerat.R}
-We define an operation, called \emph{multiplication} on $\MyPrerat$ as follows: the multiplication of $x = (a,b)$ and $y = (b, c)$ is
-\[
-x * y = (a,b) * (c,d) = (a*c, b*d)
-\]
-\end{definition}
-
-\begin{lemma}
-    \label{MyPrerat.mul_quotient}
-    \lean{MyPrerat.mul_quotient}
-    \leanok
-If $x \approx x'$ and $y \approx y'$, then $x * y \approx x' * y'$.
-\end{lemma}
-\begin{proof}
-\uses{MyPrerat.mul}
-\leanok
-Exercice.
-\end{proof}
-
-\begin{definition}
-    \label{MyPrerat.inv}
-    \lean{MyPrerat.inv}
-    \leanok
-    \uses{MyPrerat.R}
-We define an operation, called \emph{negation} on $\MyPrerat$ as follows: the inverse of $x = (a,b)$ is:
-\[
-\mbox{if} b \neq 0 \mbox{ then } x^{-1} = (b, a), \mbox{ otherwise } x^{-1} = (0, 1)
-\]
-Note that $x^{-1}$ is \emph{always} defined!
-\end{definition}
-
-\begin{lemma}
-    \label{MyPrerat.inv_quotient}
-    \lean{MyPrerat.inv_quotient}
-    \leanok
-If $x \approx x'$, then $x^{-1} \approx x'^{-1}$.
-\end{lemma}
-\begin{proof}
-\uses{MyPrerat.inv}
-\leanok
-Exercice.
-\end{proof}
-
-\section{The rationals}
-
-\subsection{Definitions}
-
-\begin{definition}
-    \label{MyRat}
-    \lean{MyRat}
-    \leanok
-    \uses{MyPrerat.R_equiv}
-    We define our rationals $\MyRat$ as
-\[
-\MyRat = \MyPrerat \, / \approx
-\]
-We will write $\llbracket (a, b) \rrbracket$ for the class of $(a,b)$.
-\end{definition}
-
-\begin{definition}
-    \label{MyRat.zero}
-    \lean{MyRat.zero}
-    \uses{MyPrerat.R_equiv}
-    \leanok
-We define the zero of $\MyRat$, denoted $0$ as the class of $(0,1)$ (note that $1 \neq 0$ in $\MyInt$).
-\end{definition}
-
-\begin{definition}
-    \label{MyRat.one}
-    \lean{MyRat.one}
-    \uses{MyPrerat.R_equiv}
-    \leanok
-We define the one of $\MyRat$, denoted $1$ as the class of $(1,1)$ (note that $1 \neq 0$ in $\MyInt$).
-\end{definition}
-
-\subsection{Commutative ring structure}
-
-\begin{definition}
-    \label{MyRat.neg}
-    \lean{MyRat.neg}
-    \uses{MyPrerat.R_equiv, MyPrerat.neg_quotient}
-    \leanok
-We define the negation of $x = \llbracket (a, b) \rrbracket$ in $\MyInt$ as
-\[
--x = \llbracket -(a, b) \rrbracket
-\]
-Thanks to Lemma~\ref{MyPrerat.neg_quotient} this is well defined.
-\end{definition}
-
-\begin{definition}
-    \label{MyRat.add}
-    \lean{MyRat.add}
-    \uses{MyPrerat.R_equiv, MyPrerat.add_quotient}
-    \leanok
-We define the addition of $x = \llbracket (a, b) \rrbracket$ and $y = \llbracket (c, d) \rrbracket$ in $\MyInt$ as
-\[
-x + y = \llbracket (a,b)+(c,d) \rrbracket
-\]
-Thanks to Lemma~\ref{MyPrerat.add_quotient} this is well defined.
-\end{definition}
-
-\begin{definition}
-    \label{MyRat.mul}
-    \lean{MyRat.mul}
-    \uses{MyPrerat.R_equiv, MyPrerat.mul_quotient}
-    \leanok
-We define the multiplication of $x = \llbracket (a, b) \rrbracket$ and $y = \llbracket (c, d) \rrbracket$ in $\MyInt$ as
-\[
-x * y = \llbracket (a, b)*(c,d) \rrbracket
-\]
-Thanks to Lemma~\ref{MyPrerat.mul_quotient} this is well defined.
-\end{definition}
-
-\begin{definition}
-    \label{MyRat.inv}
-    \lean{MyRat.inv}
-    \uses{MyPrerat.R_equiv, MyPrerat.inv_quotient}
-    \leanok
-We define the negation of $x = \llbracket (a, b) \rrbracket$ in $\MyInt$ as
-\[
-x^{-1} = \llbracket (a, b)^{-1} \rrbracket
-\]
-Thanks to Lemma~\ref{MyPrerat.inv_quotient} this is well defined.
-\end{definition}
-
-\begin{proposition}
-    \label{MyRat.commRing}
-    \lean{MyRat.commRing}
-    \leanok
-    $\MyRat$ with addition and multiplication is a commutative ring.
-\end{proposition}
-\begin{proof}
-    \uses{MyRat.add, MyRat.mul, MyRat.zero, MyRat.one}
-    \leanok
-    We have to prove various properties, namely:
-    \begin{itemize}
-        \item addition is associative
-        \item $0$ works as neutral element for addition (on both sides)
-        \item existence of an inverse for addition (we prove that $x + (-x) = (-x) + x = 0$)
-        \item addition is commutative
-        \item left and right distributivity of multiplication with respect to addition
-        \item associativity of multiplication
-        \item $1$ works as neutral element for multiplication (on both sides)
-    \end{itemize}
-    All the proofs are essentially identical, going to $\MyInt$, unravelling the definition and then
-    checking the equality holds in $\MyInt$.
-\end{proof}
-
-\begin{lemma}
-    \label{MyRat.zero_ne_one}
-    \lean{MyRat.zero_ne_one}
-    \leanok
-In $\MyRat$ we have $0 \neq 1$.
-\end{lemma}
-\begin{proof}
-    \leanok
-    \uses{MyRat.zero, MyRat.one}
-    If $0 = 1$ by definition we would have $\llbracket (0,1) \rrbracket = \llbracket (1,1) \rrbracket$
-    so $0*1=1*0$ in $\MyInt$, that is absurd.
-\end{proof}
-
-\begin{lemma}
-    \label{MyRat.mul_inv_cancel}
-    \lean{MyRat.mul_inv_cancel}
-    \leanok
-Let $x \neq 0$ be in $\MyRat$. Then $x * x^{-1} = 1$.
-\end{lemma}
-\begin{proof}
-    \leanok
-    \uses{MyRat.inv, MyRat.mul}
-    Let $x = \llbracket (a,b) \rrbracket$, with $b \neq 0$. Since $x \neq 0$ we have $a \neq 0$ and so
-    $x^{-1} = \llbracket (b,a) \rrbracket$. The lemma follows by definition of multiplication.
-\end{proof}
-
-\begin{proposition}
-    \label{MyRat.field}
-    \lean{MyRat.field}
-    \leanok
-    $\MyRat$ with addition and multiplication is a field.
-\end{proposition}
-\begin{proof}
-    \uses{MyRat.commRing, MyRat.mul_inv_cancel}
-    \leanok
-    Clear because of Lemma~\ref{MyRat.mul_inv_cancel}.
-\end{proof}
-
-\subsection{\texorpdfstring{The inclusion $i \colon \N \to \MyRat$}{The inclusion}}
-\begin{definition}
-    \label{MyRat.i}
-    \lean{MyRat.i}
-    \uses{MyRat}
-    \leanok
-    We define a map
-\begin{gather*}
-    i \colon \N \to \MyRat \\
-    n \mapsto \llbracket (\MyInt.i n,1) \rrbracket
-\end{gather*}
-\end{definition}
-
-\begin{lemma}
-    \label{MyRat.i_zero}
-    \lean{MyRat.i_zero}
-    \leanok
-We have that $i(0) = 0$.
-\end{lemma}
-\begin{proof}
-    \uses{MyRat, MyRat.i}
-    \leanok
-Clear from the definition.
-\end{proof}
-
-\begin{lemma}
-    \label{MyRat.i_one}
-    \lean{MyRat.i_one}
-    \leanok
-We have that $i(1) = 1$.
-\end{lemma}
-\begin{proof}
-    \uses{MyRat, MyRat.i}
-    \leanok
-Clear from the definition.
-\end{proof}
-
-\begin{lemma}
-    \label{MyRat.i_add}
-    \lean{MyRat.i_add}
-    \leanok
-For all $a$ and $b$ in $\N$ we have that
-\[
-i(a+b) = i(a) + i(b)
-\]
-\end{lemma}
-\begin{proof}
-    \uses{MyRat.add, MyRat.i}
-    \leanok
-    We have $i(a+b) = \llbracket (\MyInt.i (a+b), 1) \rrbracket = \llbracket (\MyInt.i (a), 1) + (\MyInt.i (b), 1) \rrbracket$, $i(a) = \llbracket (\MyInt.i(a), 1) \rrbracket$ and
-    $i(b) = \llbracket (\MyInt.i (b), 1) \rrbracket$, so we need to prove that
-\[
-\llbracket (\MyInt.i (a), 1) + (\MyInt.i (b), 1) \rrbracket = \llbracket (\MyInt.i (a), 1) \rrbracket + \llbracket (\MyInt.i (b), 1) \rrbracket
-\]
-that is obvious from the definition ().
-\end{proof}
-
-\begin{lemma}
-    \label{MyRat.i_mul}
-    \lean{MyRat.i_mul}
-    \leanok
-For all $a$ and $b$ in $\N$ we have that
-\[
-i(a*b) = i(a) * i(b)
-\]
-\end{lemma}
-\begin{proof}
-    \uses{MyRat.mul, MyRat.i}
-    \leanok
-Similar to the proof of Lemma~\ref{MyRat.i_add}.
-\end{proof}
-
-\begin{lemma}
-    \label{MyRat.i_injective}
-    \lean{MyRat.i_injective}
-    \leanok
-    We have that $i$ is injective.
-\end{lemma}
-\begin{proof}
-    \uses{MyRat.i}
-    \leanok
-    Let $a$ be such that $i(a)=0$. This means $\llbracket (\MyInt.i a,1) \rrbracket = \llbracket (0,1) \rrbracket$ so $(\MyInt.i a) * 1 = 1 * 0$ and hence $\MyInt.i a = 0$ so $a = 0$.
-\end{proof}
-
-\subsection{\texorpdfstring{The inclusion $j \colon \MyInt \to \MyRat$}{The inclusion}}
-\begin{definition}
-    \label{MyRat.j}
-    \lean{MyRat.j}
-    \uses{MyRat}
-    \leanok
-    We define a map
-\begin{gather*}
-    j \colon \MyInt \to \MyRat \\
-    n \mapsto \llbracket (n,1) \rrbracket
-\end{gather*}
-\end{definition}
-
-\begin{lemma}
-    \label{MyRat.j_zero}
-    \lean{MyRat.j_zero}
-    \leanok
-We have that $j(0) = 0$.
-\end{lemma}
-\begin{proof}
-    \uses{MyRat, MyRat.j}
-    \leanok
-Clear from the definition.
-\end{proof}
-
-\begin{lemma}
-    \label{MyRat.j_one}
-    \lean{MyRat.j_one}
-    \leanok
-We have that $j(1) = 1$.
-\end{lemma}
-\begin{proof}
-    \uses{MyRat, MyRat.j}
-    \leanok
-Clear from the definition.
-\end{proof}
-
-\begin{lemma}
-    \label{MyRat.j_add}
-    \lean{MyRat.j_add}
-    \leanok
-For all $a$ and $b$ in $\MyInt$ we have that
-\[
-j(a+b) = j(a) + j(b)
-\]
-\end{lemma}
-\begin{proof}
-    \uses{MyRat.add, MyRat.j}
-    \leanok
-Exercice.
-\end{proof}
-
-\begin{lemma}
-    \label{MyRat.j_mul}
-    \lean{MyRat.j_mul}
-    \leanok
-For all $a$ and $b$ in $\N$ we have that
-\[
-j(a*b) = j(a) * j(b)
-\]
-\end{lemma}
-\begin{proof}
-    \uses{MyRat.mul, MyRat.j}
-    \leanok
-Exercice.
-\end{proof}
-
-\begin{lemma}
-    \label{MyRat.j_injective}
-    \lean{MyRat.j_injective}
-    \leanok
-    We have that $j$ is injective.
-\end{lemma}
-\begin{proof}
-    \uses{MyRat.j}
-    \leanok
-Exercice.
-\end{proof}
-
-\begin{lemma}
-    \label{MyRat.j_comp_eq_i}
-    \lean{MyRat.j_comp_eq_i}
-    \leanok
-    Let $n$ be a natural number. Then $\MyRat.j (\MyInt.i (n)) = MyRat.i (n)$.
-\end{lemma}
-\begin{proof}
-    \uses{MyRat.i, MyRat.j}
-    \leanok
-It follows from unravelling all the definitions.
-\end{proof}
-
-\begin{lemma}
-    \label{MyRat.Quotient.mk_def}
-    \lean{MyRat.Quotient.mk_def}
-    \leanok
-    Let $a$ and $b$ be in $\MyInt$ with $b \neq 0$. Then $\llbracket (a, b) \rrbracket = j(a)*j(b)^{-1}$.
-\end{lemma}
-\begin{proof}
-    \uses{MyRat.inv, MyRat.mul, MyRat.j}
-    \leanok
-Exercice.
-\end{proof}
+\input{rationals.tex}
