--- a/blueprint/src/integers.tex
+++ b/blueprint/src/integers.tex
@@ -539,7 +539,7 @@ It follows that $\leq$ is an order relation.
 \begin{proof}
     \uses{MyInt.le_refl, MyInt.le_antisymm, MyInt.le_trans, MyInt.le_total}
     \leanok
-    Clear from the lemmas above.
+    Clear from the lemma above.
 \end{proof}
 
 \begin{lemma}
