--- a/blueprint/src/rationals.tex
+++ b/blueprint/src/rationals.tex
@@ -690,7 +690,7 @@ It follows that $\leq$ is an order relation.
 
 \begin{lemma}
     \label{MyRat.mul_nonneg}
-    \lean{MyInt.mul_nonneg}
+    \lean{MyRat.mul_nonneg}
     \leanok
     Let $x$ and $y$ in $\MyRat$ be such that $0 \leq x$ and $0 \leq y$. Then $0 \leq x * y$.
 \end{lemma}
@@ -706,7 +706,7 @@ We have proved that $\MyRat$ is an ordered ring.
 
 \begin{lemma}
     \label{MyRat.j_le_iff}
-    \lean{MyInt.j_le_iff}
+    \lean{MyRat.j_le_iff}
     \leanok
     Let $x$ and $y$ in $\MyInt$. We have that $j(x) \leq j(y)$ if and only if $x \leq y$.
 \end{lemma}
