--- a/blueprint/src/integers.tex
+++ b/blueprint/src/integers.tex
@@ -1,7 +1,7 @@
 \chapter{The integers}
 
-We construct the integers starting from the natural numbers $MyInt$. Since \texttt{lean} already has a
-type called $MyInt$, we define a new type called $\MyInt$ that will be another definition of the integers.
+We construct the integers starting from the natural numbers $\N$. Since \texttt{lean} already has a
+type called $\Z$, we define a new type called $\MyInt$ that will be another definition of the integers.
 
 \section{The \emph{preintegers}}
 
