--- a/blueprint/src/integers.tex
+++ b/blueprint/src/integers.tex
@@ -11,7 +11,7 @@ $\MyInt$ will be a quotient of a type called $\MyPreint$.
     \label{MyPreint}
     \lean{MyPreint}
     \leanok
-    Let $\MyPreint$ be $\N \times \N$
+    Let $\MyPreint$ be $\N \times \N$.
 \end{definition}
 
 \begin{definition}
