--- a/blueprint/src/rationals.tex
+++ b/blueprint/src/rationals.tex
@@ -13,7 +13,7 @@ $\MyRat$ will be a quotient of a type called $\MyPrerat$.
     \lean{MyPrerat}
     \leanok
     \uses{MyInt}
-    Let $\MyPrerat$ be $MyInt \times MyInt \backslash \{0\}$
+    Let $\MyPrerat$ be $\MyInt \times \MyInt \backslash \{0\}$
 \end{definition}
 
 \begin{definition}
