--- a/blueprint/src/integers.tex
+++ b/blueprint/src/integers.tex
@@ -303,7 +303,7 @@ that is true by associativity and commutativity in $\N$.
     \leanok
     We have to prove various properties, namely:
     \begin{itemize}
-        \item addition is associative (already done in \ref{MyInt.add_assoc})
+        \item addition is associative (already done in Lemma~\ref{MyInt.add_assoc})
         \item $0$ works as neutral element for addition (on both sides)
         \item existence of an inverse for addition (we prove that $x + (-x) = (-x) + x = 0$)
         \item addition is commutative
