--- a/blueprint/src/rationals.tex
+++ b/blueprint/src/rationals.tex
@@ -86,7 +86,7 @@ $(-a,b)$:
 \[
 -x = -(a,b) = (-a,b)
 \]
-Note that it automatically well defined (meaning that second component of $(-a,b)$ is different from $0$).
+Note that it is automatically well defined (meaning that second component of $(-a,b)$ is different from $0$).
 \end{definition}
 
 \begin{lemma}
