--- a/blueprint/src/preamble.tex
+++ b/blueprint/src/preamble.tex
@@ -6,4 +6,7 @@
 \newcommand{\MyInt}{\mathrm{MyInt}}
 \newcommand{\MyPrerat}{\mathrm{MyPrerat}}
 \newcommand{\MyRat}{\mathrm{MyRat}}
+\newcommand{\MyPrereal}{\mathrm{MyPrereal}}
+\newcommand{\MyReal}{\mathrm{MyReal}}
+\newcommand{\IsCauchy}{\mathrm{IsCauchy}}
 \newcommand{\Lean}{\texttt{lean}}
