--- a/blueprint/src/rationals.tex
+++ b/blueprint/src/rationals.tex
@@ -503,7 +503,7 @@ It follows from unravelling all the definitions.
 Exercice.
 \end{proof}
 
-\subsection{Nonegativity}
+\subsection{Nonnegativity}
 
 Before defining the order on $\MyRat$, let's define the notion of nonnegativity.
 
